After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746497 - fix consolekit support
fix consolekit support
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-20 02:29 UTC by Ray Strode [halfline]
Modified: 2015-03-20 02:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
session: always use REUSE_VT display mode for ConsoleKit (2.83 KB, patch)
2015-03-20 02:29 UTC, Ray Strode [halfline]
none Details | Review
local-display-factory: don't use seat0 if logind not running (3.08 KB, patch)
2015-03-20 02:29 UTC, Ray Strode [halfline]
none Details | Review

Description Ray Strode [halfline] 2015-03-20 02:29:36 UTC
So I disabled logind on my system and installed ConsoleKit.
As expected, things don't quite work.

These patches fix it up.
Comment 1 Ray Strode [halfline] 2015-03-20 02:29:41 UTC
Created attachment 299901 [details] [review]
session: always use REUSE_VT display mode for ConsoleKit

The ConsoleKit path needs to use GdmLegacyDisplay, which always
reuses the greeter display.
Comment 2 Ray Strode [halfline] 2015-03-20 02:29:46 UTC
Created attachment 299902 [details] [review]
local-display-factory: don't use seat0 if logind not running

We currently only allow ConsoleKit seats if GDM is built without systemd
support, but it's possible to build GDM with systemd support and not
be running logind.

This commit fixes it to do a run time check.
Comment 3 Ray Strode [halfline] 2015-03-20 02:30:00 UTC
Attachment 299901 [details] pushed as c0c5617 - session: always use REUSE_VT display mode for ConsoleKit
Attachment 299902 [details] pushed as 9ba521c - local-display-factory: don't use seat0 if logind not running