local-display-factory: don't use seat0 if logind not running

We currently only allow ConsoleKit seats if GDM is built without systemd
support, but it's possible to build GDM with systemd support and not
be running logind.

This commit fixes it to do a run time check.

https://bugzilla.gnome.org/show_bug.cgi?id=746497